2015-07-03	Function pointers!

		include/biting-pear/lolwut.h :
		- added lolwut(, 2), for function pointers
		- lolwut(, 1):
		  - changed threshold for leaq -> leaq + addq/subq split
		    from 0x7fff0000 to 0x70000000
		  - for splits, took addq/subq out of __asm(...) so that g++
		    can move them around
		  - changed %c assembly operand modifier to %a

		include/biting-pear/kthxbai.h :
		- on C++11 compiler, now specially checks for function
		  pointer type and behaves differently in that case
		- code formatting tweaks

		README.md :
		- changed recommended way of assigning values from `var =
		  val' to `var(val)'
		- added mention of function pointers

		test/test-2.ccc ,
		test/test-2.good :
		- initial version

		GNUmakefile :
		- added test-2
		- marked test files as .PRECIOUS

		.gitignore :
		- added test-2

2015-06-30	`make check' now works.

		GNUmakefile :
		- added rule for `make check'
		- added %.o to .PRECIOUS

		configure ,
		lolwutconf/c++.inc :
		- moved most default CXXFLAGS flags into `configure'

		lolwutconf/configure.inc :
		- fixed bug in conf__barf()

		lolwutconf/lolwutconf.mk :
		- added `check' to .PHONY

		README.md :
		- `uint_least64_t' -> `std::uint_least64_t'

		test/test-1.good :
		- added

		.gitignore :
		- added derp.h

2015-06-27	Pre-C++11 compiler support.  And, added +=, -=, ++, and --
		for pointers.

		include/biting-pear/bbq.h :
		- now uses generated include/biting-pear/derp.h

		include/biting-pear/kthxbai.h ,
		include/biting-pear/lolwut.h ,
		- added +=, -=, ++, and -- for pointers

		lolwutconf/c++.inc ,
		lolwutconf/configure.inc ,
		lolwutconf/lolwutconf.mk :
		- initial version

		GNUmakefile :
		- moved some logic into lolwutconf/lolwutconf.mk
		- now checks for both <cinttypes> and <inttypes.h>
		- now creates include/biting-pear/derp.h

		configure :
		- moved most logic into lolwutconf/*
		- now checks for both <cinttypes> and <inttypes.h>

2015-06-22	Further internal cleanup.
