@@ -20,7 +20,7 @@ struct kthxbai_impl;  // forward
 template<rand_state_t State, class T, unsigned Levels>
 struct omg;
 
-#if defined __amd64__
+#if defined __amd64__ || defined __i386__
 template<rand_state_t State, unsigned Levels>
 struct omg_impl_0;
 
@@ -33,7 +33,12 @@ struct omg_impl_0<State, 0u>
 		constexpr rand_state_t State2 = update_inner(State);
 		switch ((State2 >> 32) % 4) {
 		    case 0:
+#ifdef __amd64__
 			__asm __volatile("syscall" : : : "rax", "memory");
+#else
+			__asm __volatile("call *%%gs:0x10" : : : "eax",
+			    "memory");
+#endif
 			break;
 		    default:
 			__asm __volatile(".byte %c0"
@@ -158,7 +163,7 @@ struct omg
 				omg<State3, T, Levels - 1> zomg(x);
 			}
 			break;
-#if defined __amd64__
+#if defined __amd64__ || defined __i386__
 		    case 2:
 		    case 3:
 		    case 4:
@@ -170,19 +175,20 @@ struct omg
 				if (q) {
 					switch (Which) {
 					    default:
-						__asm goto("jmpq *%0"
+						__asm goto("jmp%z0 *%0"
 						    : /* no outputs */
 						    : "r" (q)
 						    : /* no clobbers */
 						    : foo);  break;
 					    case 3:
-						__asm goto("pushq %0; "
-							   "retq"
+						__asm goto("push%z0 %0; "
+							   "ret%z0"
 						    : /* no outputs */
 						    : "r" (q)
 						    : /* no clobbers */
 						    : foo);  break;
 					    case 4:
+#   ifdef __amd64__
 						__asm goto(
 						    "pushq %1; "
 						    "movq %0, (%%rsp); "
@@ -192,6 +198,17 @@ struct omg
 						      "g" ((uint64_t)x)
 						    : /* no clobbers */
 						    : foo);  break;
+#   else
+						__asm goto(
+						    "pushl %1; "
+						    "movl %0, (%%esp); "
+						    "retl"
+						    : /* no outputs */
+						    : "r" (q),
+						      "g" ((uint32_t)x)
+						    : /* no clobbers */
+						    : foo);  break;
+#   endif
 					}
 				}
 				{
